--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -40,6 +40,20 @@
       </p>
     </div>
 
+    <!-- Proyectos Pendientes (Nueva tarjeta) -->
+    <div class="card project-card">
+      <h3>Proyectos Pendientes</h3>
+      <div class="project-info">
+        <img
+          src="assets/project-icon.png"
+          alt="Project Icon"
+          class="project-icon"
+        />
+        <p class="project-count">{{ projectsCount }}</p>
+      </div>
+      <p class="project-description">Cantidad total de proyectos pendientes.</p>
+    </div>
+
     <!-- Reporte de Eventos / Proyectos -->
     <div class="card summary-card">
       <div class="header-dropdown">
