--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -24,9 +24,9 @@
       <p class="project-description">Cantidad total de proyectos en curso.</p>
     </div>
 
-    <!-- Proyectos Finalizados -->
+    <!-- Proyectos En Procesos -->
     <div class="card project-card">
-      <h3>Proyectos Finalizados</h3>
+      <h3>Proyectos en Curso</h3>
       <div class="project-info">
         <img
           src="assets/project-icon.png"
@@ -40,9 +40,9 @@
       </p>
     </div>
 
-    <!-- Proyectos Pendientes (Nueva tarjeta) -->
+    <!-- Proyectos Finalizados (Nueva tarjeta) -->
     <div class="card project-card">
-      <h3>Proyectos Pendientes</h3>
+      <h3>Proyectos Finalizados</h3>
       <div class="project-info">
         <img
           src="assets/project-icon.png"
