--- a/src/app/components/fuel-management/fuel-management.component.css
+++ b/src/app/components/fuel-management/fuel-management.component.css
@@ -1,8 +1,7 @@
 .fuel-management-container {
-    max-width: 400px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 1rem;
-    border: 1px solid #ddd;
     border-radius: 8px;
   }
 
@@ -30,6 +29,13 @@
     font-weight: bold;
   }
   
+  h2{
+    font-size: 36px; /* Aumentar el tamaño de fuente */
+    color: #1a202c; /* Asegúrate de usar un color adecuado */
+    font-weight: bold;
+    margin-top: 10px;
+  }
+
   input[type='number'],
   select {
     width: 100%;
