--- a/src/app/components/project-dashboard/project-details/project-details.component.html
+++ b/src/app/components/project-dashboard/project-details/project-details.component.html
@@ -1,14 +1,9 @@
 <div class="project-details-container">
-  <h2>Detalles del Proyecto</h2>
-
-  <div class="form-group">
-    <label for="projectName">Nombre del Proyecto:</label>
-    <input
-      type="text"
-      id="projectName"
-      [(ngModel)]="projectName"
-      placeholder="Nombre del Proyecto"
-    />
+  <div class="header">
+    <h2>Detalles del Proyecto</h2>
+    <button class="btn-edit" *ngIf="!isEditing" (click)="enableEditing()">
+      Editar
+    </button>
   </div>
 
   <div class="form-group">
@@ -17,30 +12,58 @@
       id="projectDescription"
       [(ngModel)]="projectDescription"
       placeholder="Descripción del Proyecto"
+      [readonly]="!isEditing"
     ></textarea>
   </div>
 
   <div class="form-group">
     <label for="startDate">Fecha de Inicio:</label>
-    <input type="date" id="startDate" [(ngModel)]="startDate" />
+    <input
+      type="date"
+      id="startDate"
+      [(ngModel)]="startDate"
+      [readonly]="!isEditing"
+    />
   </div>
 
   <div class="form-group">
     <label for="endDate">Fecha de Finalización:</label>
-    <input type="date" id="endDate" [(ngModel)]="endDate" />
+    <input
+      type="date"
+      id="endDate"
+      [(ngModel)]="endDate"
+      [readonly]="!isEditing"
+    />
   </div>
 
   <div class="form-group">
     <label for="status">Estado:</label>
-    <input
-      type="text"
-      id="status"
-      [(ngModel)]="status"
-      placeholder="Estado del Proyecto"
-    />
+    <select id="status" [(ngModel)]="status" [disabled]="!isEditing">
+      <option value="En curso">En curso</option>
+      <option value="Finalizado">Finalizado</option>
+      <option value="Cancelado">Cancelado</option>
+    </select>
   </div>
 
-  <button class="btn btn-primary" (click)="saveDetails()">
+  <div class="form-group">
+    <h3>Asignación de Recursos</h3>
+    <table class="resource-table">
+      <thead>
+        <tr>
+          <th>Empleado</th>
+          <th>Máquina</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let pair of resourcePairs; let i = index">
+          <td>{{ pair.employee }}</td>
+          <td>{{ pair.machine }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <button class="btn btn-primary" *ngIf="isEditing" (click)="saveDetails()">
     Guardar Cambios
   </button>
 </div>
