--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="dashboard-container">
   <app-shared-dashboard></app-shared-dashboard>
   <div class="dashboard-content">
+    <!-- Gráfico de Recursos -->
     <div class="card chart-card large-chart">
       <div class="title-selector-container">
         <h2>Gráfico de Recursos</h2>
@@ -19,8 +20,9 @@
       </div>
     </div>
 
+    <!-- Proyectos en Curso -->
     <div class="card project-card">
-      <h3>Proyectos</h3>
+      <h3>Proyectos en Curso</h3>
       <div class="project-info">
         <img
           src="assets/project-icon.png"
@@ -31,6 +33,8 @@
       </div>
       <p class="project-description">Cantidad total de proyectos en curso.</p>
     </div>
+
+    <!-- Proyectos Finalizados -->
     <div class="card project-card">
       <h3>Proyectos Finalizados</h3>
       <div class="project-info">
@@ -45,6 +49,21 @@
         Cantidad total de proyectos finalizados.
       </p>
     </div>
+
+    <div class="card project-card">
+      <h3>Proyectos en Curso</h3>
+      <div class="project-info">
+        <img
+          src="assets/project-icon.png"
+          alt="Project Icon"
+          class="project-icon"
+        />
+        <p class="project-count">{{ projectsCount }}</p>
+      </div>
+      <p class="project-description">Cantidad total de proyectos en Curso.</p>
+    </div>
+
+    <!-- Reporte de Eventos -->
     <div class="card summary-card">
       <h3>Reporte de Eventos</h3>
       <div class="table-container">
@@ -114,6 +133,8 @@
         No hay eventos disponibles.
       </p>
     </div>
+
+    <!-- Gráfico de Líneas -->
     <div class="card full-width-card">
       <h3>Gráfico de líneas</h3>
       <div class="chart-container-line">
@@ -122,6 +143,7 @@
     </div>
   </div>
 
+  <!-- Modal de Cierre de Sesión -->
   <div *ngIf="showLogoutModal" class="modal-overlay">
     <div class="modal-content">
       <h2>Confirmar Cierre de Sesión</h2>
