--- a/src/app/components/project-dashboard/project-dashboard.component.html
+++ b/src/app/components/project-dashboard/project-dashboard.component.html
@@ -109,7 +109,7 @@
   <!-- Contenido principal -->
   <div class="content">
     <h1>Bienvenido al {{ project?.name }}</h1>
-    <p>{{ project?.description || "Descripción no disponible." }}</p>
+    <p>{{ project?.description }}</p>
     <router-outlet></router-outlet>
   </div>
 </div>
