--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,11 +10,12 @@
           [(ngModel)]="selectedResource"
           (change)="onResourceChange()"
         >
-          <option *ngFor="let resource of resources" [value]="resource">
-            {{ resource }}
+          <option *ngFor="let resource of resources" [value]="resource.id">
+            {{ resource.name }}
           </option>
         </select>
       </div>
+
       <div class="chart-container">
         <canvas id="myPieChart" width="100" height="100"></canvas>
       </div>
